syntax = "proto3";

package order;
option go_package = ".;generator";

message Order {
  int64 id = 1;
  string name = 2;
  double price = 3;
}

message CreateOrderRequest {
  string name = 1;
  double price = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  int64 id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {}

message ListOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}
